mType/tests/testFiles/error/error/nestedFunctionDeclaration.mt
function outer(): void {
    function inner(): int {
        return 42;
    }
}
